--- a/src/App.css
+++ b/src/App.css
@@ -7,38 +7,135 @@
 }
 
 
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:40px;
+	box-shadow: 2px 2px 15px #0000004d;
+  z-index:100;
+	transition: .3s linear;}
+ .float:hover {
+    color: white;
+    background: #20bd5b; 
+	transform: scale(1.1);}
+.whats-float{
+	margin-top:16px; }
+
+@media only screen and (max-width: 767px){
+.float {
+    bottom: 15px;
+    right: 15px; }
+}
 
 
- .whatsapp_float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 40px;
-  right: 40px;
-  background-color: #25d366;
-  color: #FFF;
-  border-radius: 50px;
+[tooltip]::before,
+[tooltip]::after {
+  text-transform: none; 
+  font-size: 12px; 
+  line-height: 1;
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  display: none;
+  opacity: 0;
+}
+[tooltip]::before {
+  content: '';
+  border: 5px solid transparent;
+  z-index: 1001; 
+}
+[tooltip]::after {
+  content: attr(tooltip);
+  
+  font-family: Montserrat,sans-serif;
   text-align: center;
-  font-size: 40px;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 100;
+  
+  min-width: 3em;
+  max-width: 21em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1ch 1.5ch;
+  border-radius: .3ch;
+  box-shadow: 0 1em 2em -.5em rgba(0, 0, 0, 0.35);
+  background: #fff;
+  color: #222;
+  z-index: 1000;
 }
 
-.whatsapp_float :hover{
-  color: #FFF;
+[tooltip]:hover::before,
+[tooltip]:hover::after {
+  display: block;
 }
 
 
+[tooltip='']::before,
+[tooltip='']::after {
+  display: none !important;
+}
 
 
-@media screen and (max-width: 767px) {
-  .whatsapp_float {
-      width: 40px;
-      height: 40px;
-      bottom: 20px;
-      right: 10px;
-      font-size: 30px;
+[tooltip]:not([flow])::before,
+[tooltip][flow^="up"]::before {
+  bottom: 103%;
+  border-bottom-width: 0;
+  border-top-color: #fff;
+}
+[tooltip]:not([flow])::after,
+[tooltip][flow^="up"]::after {
+  bottom: calc(102% + 5px);
+}
+[tooltip]:not([flow])::before,
+[tooltip][flow^="up"]::before {
+  left: 50%;
+  transform: translate(-50%, -.5em);
+}
+
+[tooltip]:not([flow])::after,
+[tooltip][flow^="up"]::after {
+  left: 5%;
+  transform: translate(-5%, -.5em);
+}
+
+
+@keyframes tooltips-vert {
+  to {
+    opacity: .9;
+    transform: translate(-50%, 0);
   }
 }
+
+@keyframes tooltips-horz {
+  to {
+    opacity: .9;
+    transform: translate(0, -50%);
+  }
+}
+
+
+[tooltip]:not([flow]):hover::before,
+[tooltip]:not([flow]):hover::after,
+[tooltip][flow^="up"]:hover::before,
+[tooltip][flow^="up"]:hover::after,
+[tooltip][flow^="down"]:hover::before,
+[tooltip][flow^="down"]:hover::after {
+  animation: tooltips-vert 300ms ease-out forwards;
+}
+
+[tooltip][flow^="left"]:hover::before,
+[tooltip][flow^="left"]:hover::after,
+[tooltip][flow^="right"]:hover::before,
+[tooltip][flow^="right"]:hover::after {
+  animation: tooltips-horz 300ms ease-out forwards;
+}
+
+ 
 
 
