--- a/src/components/ItemDetail/itemdetail.css
+++ b/src/components/ItemDetail/itemdetail.css
@@ -1,23 +1,19 @@
 .card-detail {
-    background: #e1f5fe;
+    background: #ffffff;
     display: flex;
     width: auto;
     height: auto;
     margin: 1rem;
     position: relative;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 20px;
     text-align: center;
+
   }
 
-  .card-detail-1 {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  }
+ 
 
-  .card-detail-1:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
+ 
