--- a/src/components/ItemDetail/itemdetail.css
+++ b/src/components/ItemDetail/itemdetail.css
@@ -11,8 +11,19 @@
     align-items: center;
     padding: 20px;
     text-align: center;
-
+    box-shadow: 0px 5px 13px 0px rgb(0 0 0 / 30%);
+    border-radius: 5px;
   }
+
+  .specs-container{
+    border-bottom: 1px solid rgb(228, 222, 222);
+  }
+
+  .name-container{
+    border-bottom: 1px solid rgb(228, 222, 222);
+  }
+
+
 
  
 
