--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -178,3 +178,9 @@
     background-color: #ffb74d;
     
 }
+
+.orden{
+    font-size: 25px;
+    font-weight: bold;
+    font-family: 'Poller One', cursive;;
+}
